bluec-tests/tests/invalid/types_bool/invalid_cast.c
int main(void) {
    return (static _Bool) 10;
}